--- a/src/index.html
+++ b/src/index.html
@@ -5,28 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pixabay search</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
   </head>
 
   <body>
-    <div class="container">
+    <header class="header-container">
       <form class="search-form" id="search-form">
         <input
-          class="search-inpute"
           type="text"
           name="searchQuery"
           autocomplete="off"
-          placeholder="Search images..."
+          placeholder="Search images ..."
         />
-        <button type="submit" class="submit-btn">Search</button>
+        <button type="submit">Search</button>
       </form>
-    </div>
+    </header>
 
-    <section class="gallery-container">
-      <div class="gallery"></div>
-      <button type="button" class="btn-load-more is-hidden">Load more</button>
-      <div id="arrowTop" hidden></div>
-    </section>
-    <include src="./partials/example.html"></include>
+    <main>
+      <div class="gallery-container">
+        <div class="gallery"></div>
+
+        <button type="button" class="load-more is-hidden">Load more</button>
+
+        <div class="load-end is-hidden">
+          "We're sorry, but you've reached the end of search results."
+        </div>
+      </div>
+
+      <button type="button" class="btn-up" title="Up"></button>
+    </main>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
