--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pixabay search</title>
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/src/images/Pix_favicon.png"
+    />
   </head>
 
   <body>
